--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,11 @@ name = "pypi"
 flake8 = "*"
 django = "==2.2.16"
 djangorestframework = "==3.12.4"
-psycopg2 = "*"
 python-dotenv = "*"
+psycopg2 = "==2.8.6"
+djangorestframework-simplejwt = "*"
+django-rest-swagger = "*"
+drf-yasg = "*"
 
 [dev-packages]
 
