make jwt authentication and rename some classes

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg2 = "*"
 python-dotenv = "*"
 flake8 = "*"
 djangorestframework = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
