--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     ports:
       - "8000:8000"
     env_file: .env
-    command: >
-      sh -c "python manage.py migrate &&
-      python manage.py runserver 0.0.0.0:8000"
+    command: sh /app/migrations.sh
     depends_on:
       - db
