--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=ToDoCalendar.settings
 python_files = tests.py tests_*.py test_*.py *_tests.py *_test.py
-addopts = -p no:warnings --strict-markers --no-migrations --reuse-db
+addopts = -p no:warnings --strict-markers --no-migrations --reuse-db -vv
